syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.api";
option java_outer_classname = "Api";

package api;

service Api{

    rpc RunCommand(Command) returns (Reply){}

    rpc ListConfig(Id) returns (stream Config){}

    rpc RecordConfig(stream Config) returns (Reply){}
}

message Command {
    string cmd = 1;
}

message Reply {
    string message = 1;
    int32 code = 2;
}

message Id {
    string id = 1;
}

message Config {
    string id = 1;
    string path = 2;
    string level = 3;
}
